@@ -1,7 +1,7 @@
 Test Case 1: license mysqlrpladmin
 MySQL Utilities mysqlrpladmin version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -14,7 +14,7 @@ License type: GPLv2
 Test Case 3: license mysqldbcompare
 MySQL Utilities mysqldbcompare version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -27,7 +27,7 @@ License type: GPLv2
 Test Case 5: license mysqlrplcheck
 MySQL Utilities mysqlrplcheck version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -40,7 +40,7 @@ License type: GPLv2
 Test Case 7: license mysqlauditgrep
 MySQL Utilities mysqlauditgrep version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -53,7 +53,7 @@ License type: GPLv2
 Test Case 9: license mysqlrplms
 MySQL Utilities mysqlrplms version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -66,7 +66,7 @@ License type: GPLv2
 Test Case 11: license mysqlrplshow
 MySQL Utilities mysqlrplshow version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -79,7 +79,7 @@ License type: GPLv2
 Test Case 13: license mysqlfailover
 MySQL Utilities mysqlfailover version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -92,7 +92,7 @@ License type: GPLv2
 Test Case 15: license mysqlindexcheck
 MySQL Utilities mysqlindexcheck version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -105,7 +105,7 @@ License type: GPLv2
 Test Case 17: license mysqlmetagrep
 MySQL Utilities mysqlmetagrep version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -118,7 +118,7 @@ License type: GPLv2
 Test Case 19: license mysqlserverinfo
 MySQL Utilities mysqlserverinfo version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -131,7 +131,7 @@ License type: GPLv2
 Test Case 21: license mysqluserclone
 MySQL Utilities mysqluserclone version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -144,7 +144,7 @@ License type: GPLv2
 Test Case 23: license mysqldiskusage
 MySQL Utilities mysqldiskusage version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -157,7 +157,7 @@ License type: GPLv2
 Test Case 25: license mysqldbcopy
 MySQL Utilities mysqldbcopy version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -170,7 +170,7 @@ License type: GPLv2
 Test Case 27: license mysqlbinlogpurge
 MySQL Utilities mysqlbinlogpurge version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -183,7 +183,7 @@ License type: GPLv2
 Test Case 29: license mysqlrplsync
 MySQL Utilities mysqlrplsync version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -196,7 +196,7 @@ License type: GPLv2
 Test Case 31: license mysqldbexport
 MySQL Utilities mysqldbexport version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -209,7 +209,7 @@ License type: GPLv2
 Test Case 33: license mysqldiff
 MySQL Utilities mysqldiff version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -222,7 +222,7 @@ License type: GPLv2
 Test Case 35: license mysqlbinlogrotate
 MySQL Utilities mysqlbinlogrotate version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -235,7 +235,7 @@ License type: GPLv2
 Test Case 37: license mysqlserverclone
 MySQL Utilities mysqlserverclone version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -248,7 +248,7 @@ License type: GPLv2
 Test Case 39: license mysqlfrm
 MySQL Utilities mysqlfrm version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -261,7 +261,7 @@ License type: GPLv2
 Test Case 41: license mysqlreplicate
 MySQL Utilities mysqlreplicate version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -274,7 +274,7 @@ License type: GPLv2
 Test Case 43: license mysqluc
 MySQL Utilities mysqluc version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -287,7 +287,7 @@ License type: GPLv2
 Test Case 45: license mysqlbinlogmove
 MySQL Utilities mysqlbinlogmove version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -300,7 +300,7 @@ License type: GPLv2
 Test Case 47: license mysqlprocgrep
 MySQL Utilities mysqlprocgrep version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -313,7 +313,7 @@ License type: GPLv2
 Test Case 49: license mysqldbimport
 MySQL Utilities mysqldbimport version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -326,7 +326,7 @@ License type: GPLv2
 Test Case 51: license mysqlgrants
 MySQL Utilities mysqlgrants version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -339,7 +339,7 @@ License type: GPLv2
 Test Case 53: license mysqlslavetrx
 MySQL Utilities mysqlslavetrx version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
@@ -352,7 +352,7 @@ License type: GPLv2
 Test Case 55: license mysqlauditadmin
 MySQL Utilities mysqlauditadmin version X.Y.Z
 License type: GPLv2
-Copyright (c) 2010, 2014 Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2010, 2015 Oracle and/or its affiliates. All rights reserved.
 This is a release of dual licensed MySQL Utilities. For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
